# open-computer-vision

./: .gitignore  README.md  pyproject.toml
lesson-10-color-detection/: main.py  util.py
lesson-2-io/: README.md  io_image.py  io_video.py  io_webcam.py
lesson-3-basic-operations/: crop.py  resizing.py
lesson-4-colorspaces/: main.py
lesson-5-blurring/: main.py
lesson-6-threshold/: adaptive-threshold.py  global-threshold.py
lesson-7-edge-detector/: main.py
lesson-8-drawing/: main.py
lesson-9-contours/: main.py
