[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-vision-lab"
version = "1.0.0"
description = "Basic computer vision examples using OpenCV"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]